Latest version - burned down and started over
hole data not showing on course

--- a/test/fixtures/courses.yml
+++ b/test/fixtures/courses.yml
@@ -2,16 +2,12 @@
 
 one:
   name: MyString
-  par: 1
-  location: MyText
+  location: MyString
+  par: MyString
   tees: MyString
-  slope: 1
-  rating: 1
 
 two:
   name: MyString
-  par: 1
-  location: MyText
+  location: MyString
+  par: MyString
   tees: MyString
-  slope: 1
-  rating: 1
